--- a/Apps/RESTful.Catalog.API/appsettings.json
+++ b/Apps/RESTful.Catalog.API/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "ConnectionString": "Server=Marat; Database=RESTful.CatalogDb.API; User Id=Admin; Password=Admin12345",
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
