--- a/Apps/RESTful.Catalog.API.Infrastructure/RESTful.Catalog.API.Infrastructure.csproj
+++ b/Apps/RESTful.Catalog.API.Infrastructure/RESTful.Catalog.API.Infrastructure.csproj
@@ -8,6 +8,8 @@
     <Compile Remove="CatalogContextSeed.cs" />
     <Compile Remove="Migrations\20180915122715_init.cs" />
     <Compile Remove="Migrations\20180915125809_init.cs" />
+    <Compile Remove="Migrations\20180916071408_Init.cs" />
+    <Compile Remove="Migrations\20180920203510_Init.cs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -19,10 +21,6 @@
     <Reference Include="Microsoft.EntityFrameworkCore">
       <HintPath>C:\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.entityframeworkcore\2.1.1\lib\netstandard2.0\Microsoft.EntityFrameworkCore.dll</HintPath>
     </Reference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Migrations\" />
   </ItemGroup>
 
 </Project>
