--- a/Apps/RESTful.Catalog.API/Properties/launchSettings.json
+++ b/Apps/RESTful.Catalog.API/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/values",
+      "launchUrl": "api/catalogs",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -20,7 +20,7 @@
     "RESTful.Catalog.API": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/Catalog/GetCatalogTypes",
+      "launchUrl": "api/catalogs",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
