--- a/Apps/RESTful.Catalog.API/RESTful.Catalog.API.csproj
+++ b/Apps/RESTful.Catalog.API/RESTful.Catalog.API.csproj
@@ -36,6 +36,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\RESTful.Catalog.API.Infrastructure\RESTful.Catalog.API.Infrastructure.csproj" />
+    <ProjectReference Include="..\RESTful.Catalog.API.Services\RESTful.Catalog.API.Services.csproj" />
     <ProjectReference Include="..\RESTful.Catalog.API.Utilities\RESTful.Catalog.API.Utilities.csproj" />
   </ItemGroup>
 
