configure nlog file

--- a/Apps/RESTful.Catalog.API/nlog.config
+++ b/Apps/RESTful.Catalog.API/nlog.config
@@ -1,9 +1,28 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <targets>
-    <target name="logfile" xsi:type="File" filename="nlog.${shortdate}.log" />
-  </targets>
+<nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+      autoReload="true" 
+      internalLogLevel="info" 
+      internalLogFile="c:\temp\internal-nlog.log">           
+<targets>
+    <target name="logfile" xsi:type="File" filename="c:\temp\nlog-info-${shortdate}.log" 
+  layout="
+      Time       : ${time}${newline}
+      MachineName: ${machinename}${newline}
+      Logger     : ${logger}${newline}
+      Level      : ${level}${newline}
+      Message    : ${message}${newline}
+      "/>
+<target name="logfile-error" xsi:type="File" filename="c:\temp\nlog-error-${shortdate}.log"
+  layout="
+      Time       : ${time}${newline}
+      MachineName: ${machinename}${newline}
+      Logger     : ${logger}${newline}
+      Level      : ${level}${newline}
+      Message    : ${message}${newline}
+     "/>  
+</targets>
   <rules>
-    <logger name="*" minlevel = "Info" writeTo ="logfile" />
+    <logger name="*" maxlevel = "Info" writeTo ="logfile" />
+    <logger name="*" minlevel = "Error" writeTo ="logfile-error" />
   </rules>
 </nlog>
