--- a/Apps/Authentication.Server/appsettings.json
+++ b/Apps/Authentication.Server/appsettings.json
@@ -1,8 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+  "AuthSettings": {
+    "ConnectionString": "Server=OFFICE39-PC\\MYSQLSERVER; Database=AuthDb.API; User Id=Marat; Password=Marat12345",
+    "Logging": {
+      "LogLevel": {
+        "Default": "Warning"
+      }
+    },
+    "AllowedHosts": "*"
+  }
 }
