--- a/Apps/RESTful.Catalog.API/appsettings.json
+++ b/Apps/RESTful.Catalog.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "AppSettings": {
-    "ConnectionString": "Server=Marat; Database=RESTful.CatalogDb.API; User Id=Admin; Password=Admin12345",
+    "ConnectionString": "Server=OFFICE39-PC\\MYSQLSERVER; Database=RESTful.CatalogDb.API; User Id=Marat; Password=Marat12345",
     "Logging": {
       "LogLevel": {
         "Default": "Warning"
