--- a/Apps/RESTful.Catalog.API/Properties/launchSettings.json
+++ b/Apps/RESTful.Catalog.API/Properties/launchSettings.json
@@ -2,6 +2,10 @@
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
+    "iis": {
+      "applicationUrl": "http://localhost/RESTful.Catalog.API",
+      "sslPort": 0
+    },
     "iisExpress": {
       "applicationUrl": "http://localhost:3648",
       "sslPort": 44372
@@ -10,12 +14,13 @@
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
     "IIS Express": {
-      "commandName": "IISExpress",
+      "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "api/catalogs",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "http://localhost:5012;http://localhost:5011"
     },
     "RESTful.Catalog.API": {
       "commandName": "Project",
